# vault

./: .gitignore  Cargo.toml  README.md
scripts/: clean.ps1  clean.sh
src/: Entry.rs  database.rs  folder.rs  main.rs  mod.rs  record.rs
src/app_common/: Cargo.toml
src/app_controller/: Cargo.toml
src/app_controller/src/: lib.rs
src/app_model/: Cargo.toml
src/app_model/src/: database.rs  entry.rs  folder.rs  lib.rs
src/app_tests/: Cargo.toml
src/app_tests/src/: basic_test_1.rs  lib.rs
src/app_view/: Cargo.toml  index.html
src/app_view/src/: lib.rs  vault.rs
