[package]
name = "app_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# remote dependecies
kdbx-rs = "*"
chrono = "*"
uuid = "*"
log = "*"

# local dependecies 
app_common = { path = "../app_common" }