[package]
name = "app_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# remote dependecies

# local dependecies 
app_view = { path = "../app_view" }
app_controller = { path = "../app_controller" }
app_model = { path = "../app_model" }
app_common = { path = "../app_common" }
