[package]
name = "app_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# remote dependecies
iced = "*"
#egui = "*"

# local dependecies 
app_controller = { path = "../app_controller" }
app_common = { path = "../app_common" }
