[package]
name = "app_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# remote dependecies
iced = "*"
#egui = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"

# local dependecies 
app_controller = { path = "../app_controller" }
app_common = { path = "../app_common" }
