[package]
name = "app_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# remote dependecies

eframe = {version = "0.19", features = ["persistence"]}
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

serde_json = "1.0"
once_cell = "1.15"

# local dependecies 
app_controller = { path = "../app_controller" }
app_common = { path = "../app_common" }
